--- a/src/modules/Search/components/SearchResources/SearchResources.module.css
+++ b/src/modules/Search/components/SearchResources/SearchResources.module.css
@@ -1,24 +1,24 @@
 /* Should be moved to App.css */
 .visibility-hidden {
-  visibility: hidden;
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  white-space: nowrap;
   border: 0;
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  visibility: hidden;
+  white-space: nowrap;
+  width: 1px;
 }
 
 /* Should be moved to App.css */
 .reset-fieldset {
   border: 0;
-  padding: 0.01em 0 0 0;
   margin: 0;
   min-width: 0;
+  padding: .01em 0 0;
 }
 
 .Resources {
@@ -40,20 +40,20 @@
 
 .OptionIndicator {
   cursor: pointer;
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 0;
-  width: 100%;
   height: 100%;
+  margin: 0;
   opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
 }
 
 .OptionName {
-  padding: 6px 12px;
   border-radius: 6px;
-  font-size: 0.85em;
   display: block;
+  font-size: .85em;
+  padding: 6px 12px;
 }
 
 .OptionIndicator:hover + .OptionName,
