feat: add base layout components

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,16 @@
-.layout {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.Layout {
+  display: grid;
   min-height: 100vh;
+}
+
+.LayoutHeader {
+  /* LayoutHeader */
+}
+
+.LayoutMain {
+  /* LayoutMain */
+}
+
+.LayoutFooter {
+  /* LayoutFooter */
 }
